Set images to use relative URL

--- a/themes/bs5/layouts/baseof.html
+++ b/themes/bs5/layouts/baseof.html
@@ -7,7 +7,7 @@
   <!-- Page Header -->
   <header class="w-100 py-4" style="background-color: #A89ADA;">
     <div class="container d-flex flex-column align-items-center">
-      <img src="/logo.png" alt="Logo" class="mb-3 img-fluid" style="height: auto;">
+      <img src="{{ "logo.png" | relURL }}" alt="Logo" class="mb-3 img-fluid" style="height: auto;">
       <h3 class="subtitle text-center" style="color: #515151;">Peer based transgender support chat</h3>
     </div>
   </header>
