--- a/themes/bs5/layouts/_partials/head.html
+++ b/themes/bs5/layouts/_partials/head.html
@@ -3,3 +3,4 @@
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" site.Title .Title }}{{ end }}</title>
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/fonts.html" . }}
+<link rel="icon" href="{{ "favicon.ico" | relURL }}" type="image/x-icon">
