Content import - Imported pages from TA live site - CSV table shortcode to make tables easier - Removed placeholder pages from Hugo theme creation

--- a/themes/bs5/layouts/baseof.html
+++ b/themes/bs5/layouts/baseof.html
@@ -21,7 +21,7 @@
   <!-- Main Content -->
     <main class="flex-grow-1">
     <div class="container py-5" style="max-width: 1000px;">
-      <section class="text-center">
+      <section>
         {{ block "main" . }}{{ end }}
       </section>
     </div>
