--- a/themes/bs5/layouts/_partials/footer.html
+++ b/themes/bs5/layouts/_partials/footer.html
@@ -1,5 +1,5 @@
     <div class="container text-center">
-      <span>&copy; 2025 TransAdvice.</span>
+      <span>&copy; 2025 TransAdvice</span>
     </div>
 
 {{ partialCached "head/js.html" . }}
