--- a/themes/bs5/layouts/_partials/head.html
+++ b/themes/bs5/layouts/_partials/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" site.Title .Title }}{{ end }}</title>
+<title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/fonts.html" . }}
 <link rel="icon" href="{{ "favicon.ico" | relURL }}" type="image/x-icon">
