Add break-all to links

--- a/themes/bs5/assets/css/transadvice.css
+++ b/themes/bs5/assets/css/transadvice.css
@@ -72,6 +72,10 @@ main {
   width: 100%;
 }
 
+a {
+  word-break: break-all;
+}
+
 @media (max-width: 1000px) {
   .container {
     max-width: 100vw;
