Updated header color, moved to transadvice.css

--- a/themes/bs5/assets/css/transadvice.css
+++ b/themes/bs5/assets/css/transadvice.css
@@ -13,6 +13,10 @@ body {
   color: #515151;
 }
 
+.header {
+  background-color: #a89ada;
+}
+
 .footer {
   /* Sticky footer using flexbox layout */
   flex-shrink: 0;
