Fix header class

--- a/themes/bs5/layouts/baseof.html
+++ b/themes/bs5/layouts/baseof.html
@@ -5,7 +5,7 @@
 </head>
 <body class="d-flex flex-column min-vh-100" style="font-family: 'PT Sans', Arial, sans-serif;">
   <!-- Page Header -->
-  <header class="w-100 py-4" class="header">
+  <header class="w-100 py-4 header">
     <div class="container d-flex flex-column align-items-center">
       <img src="{{ "logo.png" | relURL }}" alt="Logo" class="mb-3 img-fluid" style="height: auto;">
       <h3 class="subtitle text-center" style="color: #515151;">Peer based transgender support chat</h3>
